# parallel-dag-exec

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
app/: test_dag.cpp  test_graph.cpp  test_jobserver.cpp
include/: graph.hpp  jobserver.hpp  node.hpp  queue.hpp  threadpool.hpp
lib/: jobserver.cpp  threadpool.cpp
